# ShareClean

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  ShareClean_Project_Blueprint.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  detection_issue.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.kiro/specs/share-clean/: .config.kiro  requirements.md
docs/: app.js  detection-rules.md  index.html  release-process.md  styles.css
src/shareclean/: __init__.py  __main__.py  cli.py  config.py  detectors.py  io_utils.py  models.py  redactor.py  report.py  selectors.py
tests/: test_cli.py  test_config.py  test_detectors.py  test_fixtures.py  test_io_utils.py  test_properties.py  test_redactor.py  test_report.py
tests/fixtures/: corpus_manifest.json  expected_cleaned_log.txt  sample_log.txt
tests/fixtures/ci_cd/: pipeline.env
tests/fixtures/cloud/: tokens.txt
tests/fixtures/databases/: uris.txt
tests/fixtures/false_positives/: safe.txt
tests/fixtures/generic/: mixed.txt  private_key.txt
tests/fixtures/saas/: tokens.txt
tests/fixtures/yaml_json_env/: config.yml
